force-app/main/default/objects/Order_Item__c/fields/Price_Rate_User__c.field-meta.xml
<CustomField>
    <fullName>Price_Rate_User__c</fullName>
    <formula>IF(
    TEXT(Product_Type__c)=&apos;Normal Product&apos; ,
    ((Guide_Price__c)-(Price__c))/(Guide_Price__c),
    null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Rate(Discount)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>