force-app/main/default/objects/Order_Item__c/fields/Product_Combo_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Combo_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Combo Name</label>
    <referenceTo>Product_Name__c</referenceTo>
    <relationshipLabel>Order Item (Product Combo Name)</relationshipLabel>
    <relationshipName>Order_Item_Combo</relationshipName>
    <type>Lookup</type>
</CustomField>