force-app/main/default/objects/Order_Item__c/fields/Product_Cost__c.field-meta.xml
<CustomField>
    <fullName>Product_Cost__c</fullName>
    <description>单位成本，订单行单位 与成本单位一致</description>
    <label>Unit Product Cost</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>