force-app/main/default/objects/Order_Item__c/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <formula>IF(NOT(ISBLANK(Commodity__c)),Commodity__r.Product_Sales_Info__r.Product_Description__c,Material_Description__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Description</label>
    <type>Text</type>
</CustomField>