force-app/main/default/objects/Order_Item__c/fields/Product_Group_Formula__c.field-meta.xml
<CustomField>
    <fullName>Product_Group_Formula__c</fullName>
    <formula>TEXT( Commodity__r.Product_Sales_Info__r.Product_Group__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Group Formula</label>
    <type>Text</type>
</CustomField>