force-app/main/default/objects/Order_Item__c/fields/Product_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_Text__c</fullName>
    <label>Product Name Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>