force-app/main/default/objects/Order_Item__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal Product</fullName>
                <default>true</default>
                <label>Normal Product</label>
            </value>
            <value>
                <fullName>Free Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>