force-app/main/default/objects/Order_Item__c/fields/Product_Unit_Coefficient__c.field-meta.xml
<CustomField>
    <fullName>Product_Unit_Coefficient__c</fullName>
    <formula>Sales_Unit__r.Conversion_Coefficient__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Unit Coefficient</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>