force-app/main/default/objects/Order_Item__c/fields/Product_Usage__c.field-meta.xml
<CustomField>
    <fullName>Product_Usage__c</fullName>
    <label>Product Usage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Crop using</fullName>
                <label>Uso Agrícola</label>
            </value>
            <value>
                <fullName>Non-crop using</fullName>
                <label>Uso No Agrícola</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>