force-app/main/default/objects/Order_Item__c/fields/Quote_Detail__c.field-meta.xml
<CustomField>
    <fullName>Quote_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Detail</label>
    <referenceTo>Quote_Detail__c</referenceTo>
    <relationshipLabel>Order Item</relationshipLabel>
    <relationshipName>Order_Item_Quote_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>