force-app/main/default/objects/Order_Item__c/fields/Quote_Price__c.field-meta.xml
<CustomField>
    <fullName>Quote_Price__c</fullName>
    <label>Quote Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>