force-app/main/default/objects/Order_Item__c/fields/Reference_Actual_Price__c.field-meta.xml
<CustomField>
    <fullName>Reference_Actual_Price__c</fullName>
    <formula>IF(
				OR(
								TEXT(Order__r.Order_type__c)=&apos;ZMX2&apos;,
								TEXT(Order__r.Order_type__c)=&apos;ZMX3&apos;
				),
				IF(
								isClosed__c,
								Cash_Price__c*Delivery_Quantity__c*-1,
								Cash_Price__c*Quantity__c*-1
				),
				if(
				    TEXT(Order__r.Order_type__c)=&apos;ZMX4&apos;,
								IF(
												isClosed__c,
												Cash_Price__c*Delivery_Quantity__c,
												Cash_Price__c*Quantity__c
								),
								IF(
												isClosed__c,
												Price__c*Delivery_Quantity__c,
												Price__c*Quantity__c
								)
								
				)
				
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reference Actual Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>