force-app/main/default/objects/Order_Item__c/fields/Reference_Order_Item__c.field-meta.xml
<CustomField>
    <fullName>Reference_Order_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Order Item</label>
    <referenceTo>Order_Item__c</referenceTo>
    <relationshipLabel>Order Item (Reference Order Item)</relationshipLabel>
    <relationshipName>Reference_Order_Item</relationshipName>
    <type>Lookup</type>
</CustomField>