force-app/main/default/objects/Order_Item__c/fields/Reference_Order_Item_Marigein_Level__c.field-meta.xml
<CustomField>
    <fullName>Reference_Order_Item_Marigein_Level__c</fullName>
    <formula>Reference_Order_Item__r.Margin_Level__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reference Order Item Marigein Level</label>
    <type>Text</type>
</CustomField>