force-app/main/default/objects/Order_Item__c/fields/Remain_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Remain_Quantity__c</fullName>
    <formula>IF(ISBLANK( Issue_Quantity__c ),Delivery_Quantity__c,Delivery_Quantity__c - Issue_Quantity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Order Item Delivered Quantity - ZARB Used Quantity</inlineHelpText>
    <label>ZARB Remain Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>