force-app/main/default/objects/Order_Item__c/fields/Remaining_Cosignment_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Cosignment_Quantity__c</fullName>
    <formula>Delivery_Quantity__c -  Fill_UP_Return_Goods__c - Fill_UP_Used_Num__c - Used_Number__c + Fill_UP_Send_Back__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Cosignment Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>