force-app/main/default/objects/Order_Item__c/fields/Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org__c</fullName>
    <formula>TEXT(Order__r.Sales_Org__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>*Sales Org</label>
    <type>Text</type>
</CustomField>