force-app/main/default/objects/Order_Item__c/fields/Sales_Unit__c.field-meta.xml
<CustomField>
    <fullName>Sales_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Unit Master Data</label>
    <referenceTo>Product_Unit__c</referenceTo>
    <relationshipLabel>Order Item</relationshipLabel>
    <relationshipName>Order_Item</relationshipName>
    <type>Lookup</type>
</CustomField>