force-app/main/default/objects/Order_Item__c/fields/Sales_Unit_Text__c.field-meta.xml
<CustomField>
    <fullName>Sales_Unit_Text__c</fullName>
    <label>Sales Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit</valueSetName>
    </valueSet>
</CustomField>