force-app/main/default/objects/Order_Item__c/fields/SAP_Item_Num__c.field-meta.xml
<CustomField>
    <fullName>SAP_Item_Num__c</fullName>
    <label>SAP Item Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>