force-app/main/default/objects/Order_Item__c/fields/SAP_Remain_Stock__c.field-meta.xml
<CustomField>
    <fullName>SAP_Remain_Stock__c</fullName>
    <inlineHelpText>SAP Remain Stock = Product Quantity in the Warehouse - Open Order Qty - DN Used Quantity - CRM Approving Order Qty</inlineHelpText>
    <label>SAP Remain Stock</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>