force-app/main/default/objects/Order_Item__c/fields/SAP_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>SAP_Total_Amount__c</fullName>
    <label>SAP Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>