force-app/main/default/objects/Order_Item__c/fields/SAPporder__c.field-meta.xml
<CustomField>
    <fullName>SAPporder__c</fullName>
    <formula>Order__r.SAP_Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Created in SAP</label>
    <type>Checkbox</type>
</CustomField>