force-app/main/default/objects/Order_Item__c/fields/Subsequent_Transaction_Amounts__c.field-meta.xml
<CustomField>
    <fullName>Subsequent_Transaction_Amounts__c</fullName>
    <label>Subsequent Transaction Amounts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>