force-app/main/default/objects/Order_Item__c/fields/Total_Product_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Product_Cost__c</fullName>
    <description>总成本</description>
    <label>Total Product Cost</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>