force-app/main/default/objects/Order_Item__c/fields/Toxicity_Classification__c.field-meta.xml
<CustomField>
    <fullName>Toxicity_Classification__c</fullName>
    <label>Toxicity Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>5</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>4</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>3</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>2</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>