force-app/main/default/objects/Order_Item__c/fields/Undelivered_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Undelivered_Quantity__c</fullName>
    <formula>IF(isClosed__c,0,Quantity__c - Delivery_Quantity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Item Undelivered Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>