force-app/main/default/objects/Order_Item__c/fields/Undelivered_Quantity_Apex__c.field-meta.xml
<CustomField>
    <fullName>Undelivered_Quantity_Apex__c</fullName>
    <formula>Quantity__c - Delivery_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Undelivered Quantity Apex</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>