force-app/main/default/objects/Order_Item__c/fields/Unit_Estimate_Cost__c.field-meta.xml
<CustomField>
    <fullName>Unit_Estimate_Cost__c</fullName>
    <description>阿根廷特有成本</description>
    <label>Unit Estimate Cost</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>