force-app/main/default/objects/Order_Item__c/fields/Unit_Estimate_Margin__c.field-meta.xml
<CustomField>
    <fullName>Unit_Estimate_Margin__c</fullName>
    <formula>IF(
    TEXT(Product_Type__c) = &apos;Free Product&apos;,
    null,
    IF(
        OR(
            ISBLANK(Price__c),
            ISNULL(Price__c),
            ISBLANK(Unit_Estimate_Cost__c),
            ISNULL(Unit_Estimate_Cost__c)
        ),
        null,
        Price__c-Unit_Estimate_Cost__c
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Estimate Margin</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>