force-app/main/default/objects/Order_Item__c/fields/Unit_Estimate_Margin_Rate__c.field-meta.xml
<CustomField>
    <fullName>Unit_Estimate_Margin_Rate__c</fullName>
    <formula>IF(
    TEXT(Product_Type__c) = &apos;Free Product&apos;,
    null,
    Unit_Estimate_Margin__c / Price__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Estimate Margin Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>