force-app/main/default/objects/Order_Item__c/fields/Unit_Price_w_o_tax__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_w_o_tax__c</fullName>
    <description>不含佣金单价</description>
    <label>Unit Price withnot Commission(w/o tax)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>