force-app/main/default/objects/Order_Item__c/fields/Used_Number__c.field-meta.xml
<CustomField>
    <fullName>Used_Number__c</fullName>
    <description>寄售补货已经使用的数量</description>
    <label>Issue Consignment Quantity (Migration)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>