force-app/main/default/objects/Order_Item__c/fields/YPF_External_ID__c.field-meta.xml
<CustomField>
    <fullName>YPF_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>YPF External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>