force-app/main/default/objects/Order_Item__c/fields/ZARB_Remain_Amount__c.field-meta.xml
<CustomField>
    <fullName>ZARB_Remain_Amount__c</fullName>
    <formula>Remain_Quantity__c*Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ZARB Remain Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>