force-app/main/default/objects/Order_Item__c/fields/ZARB_Used_Quantity_Test_Only__c.field-meta.xml
<CustomField>
    <fullName>ZARB_Used_Quantity_Test_Only__c</fullName>
    <label>ZARB Used Quantity(Test Only)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>