force-app/main/default/objects/Order_Item__c/fields/ZARE_Delivery_Note__c.field-meta.xml
<CustomField>
    <fullName>ZARE_Delivery_Note__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ZARE Delivery Note</label>
    <referenceTo>Delivery_Note__c</referenceTo>
    <relationshipLabel>ZARF Order Item</relationshipLabel>
    <relationshipName>ZARF_Order</relationshipName>
    <type>Lookup</type>
</CustomField>