force-app/main/default/objects/Order_Item__c/fields/ZARE_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>ZARE_Order_Number__c</fullName>
    <label>ZARE Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>