force-app/main/default/objects/Order_Item__c/validationRules/Validate_Tolling_Product_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Tolling_Product_Code</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Order__r.Quotes__r.Quotation_Type__c)==&apos;Tolling&apos;,!BEGINS(Product__r.Name,&apos;Z&apos;))</errorConditionFormula>
    <errorMessage>For tolling orders, please select products with a product code that starts with &apos;Z&apos;.</errorMessage>
</ValidationRule>