force-app/main/default/objects/Order_Item__c/validationRules/YPF_CheckProductType.validationRule-meta.xml
<ValidationRule>
    <fullName>YPF_CheckProductType</fullName>
    <active>true</active>
    <errorConditionFormula>Order__r.Is_YPF__c  &amp;&amp; TEXT(Product_Type__c)=&apos;Free Product&apos;</errorConditionFormula>
    <errorDisplayField>Product_Type__c</errorDisplayField>
    <errorMessage>YPF order cannot choose free product!</errorMessage>
</ValidationRule>