force-app/main/default/objects/Order_Item__c/validationRules/YPF_UnitPriceCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>YPF_UnitPriceCheck</fullName>
    <active>true</active>
    <errorConditionFormula>Order__r.Is_YPF__c  &amp;&amp; TEXT(Order__r.Order_type__c)=&apos;ZARE&apos; &amp;&amp; NOT(ISNEW()) &amp;&amp; ISCHANGED( Price__c )</errorConditionFormula>
    <errorDisplayField>Price__c</errorDisplayField>
    <errorMessage>YPF order‘s unit price cannot be changed!</errorMessage>
</ValidationRule>