force-app/main/default/objects/Order_Item__c/listViews/Auto_issue_Consignment.listView-meta.xml
<ListView>
    <fullName>Auto_issue_Consignment</fullName>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>Material_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>Auto-issue Consignment</label>
</ListView>